@@ -229,6 +229,11 @@ The following is relatively complete list of the major changes (this may not be
    API Change - Changes to Rule interface
       Removed - boolean Rule.include()
       Removed - void Rule.setInclude(boolean)
+      Removed - String Rule.getRulePriorityName();
+      Removed - Rule.LOWEST_PRIORITY
+      Removed - Rule.PRIORITIES
+      Changed - void Rule.setPriority(int) to void Rule.setPriority(RulePriorityEnum)
+      Changed - int Rule.getPriority() to void RulePriorityEnum Rule.getPriority()
 
 New features:
 
